<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="first_number">Enter the first number</string>
    <string name="second_number">Enter the second number</string>
    <string name="select_an_option">Select an operation</string>
    <string name="add">Addition</string>
    <string name="subtract">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="divide">Division</string>
    <string name="calculate">Calculate</string>
    <string name="answer">Answer over here!</string>
</resources>