<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_first_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_number"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/first_number"
            app:layout_constraintBottom_toBottomOf="@id/first_number"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_number"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/icon_first_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_second_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_number"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/second_number"
            app:layout_constraintBottom_toBottomOf="@id/second_number"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/second_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_number"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/icon_second_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/second_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_select_an_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_option"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/select_an_option"
            app:layout_constraintBottom_toBottomOf="@id/select_an_option"/>

        <TextView
            android:id="@+id/select_an_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_an_option"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/icon_select_an_option"
            app:layout_constraintTop_toBottomOf="@id/second_number"
            style="@style/Widget.SimpleCalculator.TextView"/>

        <RadioGroup
            android:id="@+id/operations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkedButton="@id/add"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/select_an_option"
            app:layout_constraintStart_toStartOf="@id/select_an_option"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"/>

            <RadioButton
                android:id="@+id/subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtract"/>

            <RadioButton
                android:id="@+id/multiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplication"/>

            <RadioButton
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide"/>

        </RadioGroup>

        <Button
            android:id="@+id/calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            app:layout_constraintStart_toStartOf="@id/select_an_option"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/operations"/>

        <TextView
            android:id="@+id/output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate"
            tools:text="@string/answer"
            style="@style/Widget.SimpleCalculator.TextView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>